# rust-bootstrap-nix

./: #qa.md#  .#Cargo.toml  .#dirs.txt  .#error.txt  .gitignore  .gitmodules  .pre-commit-config.local.yaml  .pre-commit-config.yaml  8d.md  BRAINDUMP.md  BRAINDUMP2.md  BRAINDUMP3.md  BRAINDUMP5.md  BRAINDUMP_consolidated.md  CONFIGURATION.md  Cargo.toml  GEMINI.md  Makefile  Makefile.deps  Makefile.expand  Makefile.lattice  Makefile.layered_compose  Makefile.prelude  Makefile.rust_workflow  Makefile.test  Makefile.test_cargo_run  NIX_FLAKES_DOCUMENTATION.md  OVERVIEW.md  PLAN.md  README.md  SCRIPTS_DOCUMENTATION.md  TODO.md  bootstrap.md  braindump.md  braindump1.md  build_and_report.sh  build_bootstrap_command.sh  build_bootstrap_in_devshell.sh  build_rust_bootstrap.sh  codereview1.md  (+88 more)
bootstrap-config-builder/: Cargo.toml  Makefile  README.md  config.toml  flake.nix  generated_config.toml  shell.nix
bootstrap-config-builder/src/: args.rs  compose_path.rs  config.rs  example.toml  lib.rs  main.rs  preconditions.rs  prelude.rs  utils.rs
bootstrap-config-builder/tests/: config_integration_test.rs
crates/code-graph-flattener/: Cargo.toml
crates/code-graph-query-tool/: Cargo.toml
crates/expanded-code-collector/: Cargo.toml
crates/flake-orchestrator-lib/: Cargo.toml
generated_projects/: Cargo.toml
generated_projects/ACTIVE_GROUPS_project/: Cargo.toml
generated_projects/AST_STATISTICS_project/: Cargo.toml
generated_projects/AcAutomaton_project/: Cargo.toml
generated_projects/AhoCorasickBuilder_project/: Cargo.toml
generated_projects/AhoCorasickKind_project/: Cargo.toml
generated_projects/AhoCorasick_project/: Cargo.toml
generated_projects/Anchored_project/: Cargo.toml
generated_projects/AppConfig_project/: Cargo.toml
generated_projects/Args_project/: Cargo.toml
generated_projects/AstReconstructionFunctor_project/: Cargo.toml
generated_projects/AstStatistics_project/: Cargo.toml
generated_projects/AstTraversalFunctor_project/: Cargo.toml
generated_projects/AstVisitor_project/: Cargo.toml
generated_projects/Automaton_project/: Cargo.toml
generated_projects/BUILDER_CONFIG_FILENAME_project/: Cargo.toml
generated_projects/BYTE_FREQUENCIES_project/: Cargo.toml
generated_projects/BagOfWordsVisitor_project/: Cargo.toml
generated_projects/BinsConfig_project/: Cargo.toml
generated_projects/BitSet_project/: Cargo.toml
generated_projects/BootstrapConfig_project/: Cargo.toml
generated_projects/Buffer_project/: Cargo.toml
generated_projects/BuildConfigApplicator_project/: Cargo.toml
generated_projects/BuildConfig_project/: Cargo.toml
generated_projects/BuildError_project/: Cargo.toml
generated_projects/Builder_project/: Cargo.toml
generated_projects/ByteClassElementRanges_project/: Cargo.toml
generated_projects/ByteClassElements_project/: Cargo.toml
generated_projects/ByteClassIter_project/: Cargo.toml
generated_projects/ByteClassSet_project/: Cargo.toml
generated_projects/ByteClasses_project/: Cargo.toml
generated_projects/ByteSet_project/: Cargo.toml
generated_projects/CODEGEN_BACKEND_PREFIX_project/: Cargo.toml
generated_projects/Candidate_project/: Cargo.toml
generated_projects/CargoDetails_project/: Cargo.toml
generated_projects/CargoInfoTrait_project/: Cargo.toml
generated_projects/CargoInfo_project/: Cargo.toml
generated_projects/CargoToml_project/: Cargo.toml
generated_projects/ChangeIdConfig_project/: Cargo.toml
generated_projects/ChangeIdWrapper_project/: Cargo.toml
generated_projects/CiConfigApplicator_project/: Cargo.toml
generated_projects/CiConfig_project/: Cargo.toml
generated_projects/CiEnv_project/: Cargo.toml
generated_projects/Ci_project/: Cargo.toml
generated_projects/ClassifiedUseStatements_project/: Cargo.toml
generated_projects/ClassifyUsesFunctor_project/: Cargo.toml
generated_projects/CollectedPreludeInfo_project/: Cargo.toml
generated_projects/Color_project/: Cargo.toml
generated_projects/Compiler_project/: Cargo.toml
generated_projects/Compiletest_project/: Cargo.toml
generated_projects/ComplexConfig_project/: Cargo.toml
generated_projects/ConfigApplicator_project/: Cargo.toml
generated_projects/ConfigField_project/: Cargo.toml
generated_projects/ConfigInput_project/: Cargo.toml
generated_projects/ConfigParams_project/: Cargo.toml
generated_projects/Config_project/: Cargo.toml
generated_projects/DEFAULT_BUFFER_CAPACITY_project/: Cargo.toml
generated_projects/DEFAULT_VALUE_project/: Cargo.toml
generated_projects/DFA_project/: Cargo.toml
generated_projects/DebugByte_project/: Cargo.toml
generated_projects/DebuginfoLevel_project/: Cargo.toml
generated_projects/DeclarationItem_project/: Cargo.toml
generated_projects/Declaration_project/: Cargo.toml
generated_projects/DeclsVisitor_project/: Cargo.toml
generated_projects/DistConfig_project/: Cargo.toml
generated_projects/Dist_project/: Cargo.toml
generated_projects/DocTests_project/: Cargo.toml
generated_projects/DropBomb_project/: Cargo.toml
generated_projects/DryRun_project/: Cargo.toml
generated_projects/EnvConfig_project/: Cargo.toml
generated_projects/ErrorCollection_project/: Cargo.toml
generated_projects/ErrorKind_project/: Cargo.toml
generated_projects/ErrorSample_project/: Cargo.toml
generated_projects/ExtractUsesFunctor_project/: Cargo.toml
generated_projects/FIELDS_project/: Cargo.toml
generated_projects/FatMaskBuilder_project/: Cargo.toml
generated_projects/FatVector_project/: Cargo.toml
generated_projects/Fat_project/: Cargo.toml
generated_projects/FileProcessingResult_project/: Cargo.toml
prelude-generator/: Cargo.toml  Makefile  flake.nix  generated_all_tests.rs  prelude_generator_summary.md  temp_config.toml  test_report.json  type_usage_report.toml
rust-decl-splitter/: Cargo.toml
rust-system-builder/: Cargo.toml
rust-system-composer/: .gitignore  Cargo.toml  config.toml  shell.nix  system.toml
split-expanded-bin/: Cargo.toml
split-expanded-lib/: Cargo.toml  Makefile
syn-usage-collector/: Cargo.toml
test-bootstrap-flake/: Cargo.toml
(+11770 files in other folders)
