[workspace]
resolver = "3"
members = [
    "standalonex/src/bootstrap/src/core/config_utils",
    "standalonex/src/bootstrap/src/core/config_processor",
    "standalonex/src/stage0_parser_crate",
    "configuration-nix",
    "bootstrap-config-builder",
    "standalonex/src/bootstrap/src/core/config_crates/config_tests",
    "flake-template-generator",
    "test_definitions_crates/test_definitions_lib",
    "test_definitions_crates/test_definitions_macro",
    "test_definitions_crates/test_definitions_test",
    "standalonex/src/build_helper",
    "standalonex/src/bootstrap",
    "standalonex/src/bootstrap/src/core/build_steps/test_utils",
    "standalonex/src/bootstrap/src/core/config_crates/config_core",
    "standalonex/src/bootstrap/src/core/config_crates/config_macros",
]
