[workspace]
#resolver = "2"
resolver = "3"
members = [
    "ast-decoder",
    "bootstrap-config-builder",
    "configuration-nix",
    "flake-template-generator",
    "metrics-reporter",
    "pipeline-traits",
    "prelude-generator",
#    "prelude-generator/generated_test_runner",
    "rust-system-composer",
    "split-expanded-lib",
    "split-expanded-bin",
    "standalonex/min_test_project",
#    "standalonex/src",
#    "standalonex/src/bootstrap",
    "standalonex/src/bootstrap-config",
#    "standalonex/src/bootstrap-config-builder-core",
    "standalonex/src/bootstrap-config-types",
    "standalonex/src/bootstrap-config/config_macros",
    "standalonex/src/bootstrap/src/core/build_steps/test_utils",
#    "standalonex/src/bootstrap/src/core/config_crates/config_tests",
    "standalonex/src/bootstrap/src/core/config_processor",
    "standalonex/src/bootstrap/src/core/config_utils",
    "standalonex/src/build_helper",

#
    "standalonex/src/config_core",
    "standalonex/src/config_macros",
    "standalonex/src/config_tests"	,
    
    "standalonex/src/stage0_parser_crate",
#    "test-bootstrap-flake",
    "test-openssl-sys",
    "test_definitions_crates/test_definitions_lib",
    "test_definitions_crates/test_definitions_test",
    "tools/cargo-flake-generator",
    "tools/dependency-analyzer",
    "tools/flake-orchestrator",
    # "vendor/rarrow",
    # "vendor/rarrow/others/CatDB",
    # "vendor/rarrow/others/category-theory",
    # "vendor/rarrow/others/category-theory-rs",
    # "vendor/rarrow/others/echo",
    # "vendor/rarrow/others/echo/crates/rmg-cli",
    # "vendor/rarrow/others/echo/crates/rmg-core",
    # "vendor/rarrow/others/echo/crates/rmg-ffi",
    # "vendor/rarrow/others/echo/crates/rmg-wasm",
    # "vendor/rust/hugging-face-dataset-validator-rust",
    "monadic-io-traits", "tools/task-graph-analyzer", "tools/workspace-generator", "syn-usage-collector",
]
