[package]
name = "bootstrap-config-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.86"
serde_json = "1.0.117"
toml = "0.8.12"
serde = { version = "1.0.198", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
git2 = "0.18.3"
toml_edit = "0.22.14"

[dev-dependencies]
tempfile = "3.10.1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "nix-dir"
path = "src/bin/nix-dir.rs"

[[bin]]
name = "bootstrap-config-generator"
path = "src/bin/bootstrap-config-generator.rs"

[[bin]]
name = "flake-step-manager"
path = "src/bin/flake-step-manager.rs"