[workspace]
members = [
    "aarch64_neon_project",
    "aarch64_project",
    "AcAutomaton_project",
    "ACTIVE_GROUPS_project",
    "add_project",
    "add_uses_from_type_path_project",
    "AhoCorasickBuilder_project",
    "AhoCorasickKind_project",
    "ahocorasick_project",
    "AhoCorasick_project",
    "alphabet_project",
    "Anchored_project",
    "api_project",
    "AppConfig_project",
    "args_project",
    "Args_project",
    "ast_reconstruction_functor_project",
    "AstReconstructionFunctor_project",
    "AstStatistics_project",
    "AST_STATISTICS_project",
    "ast_stats_project",
    "AstTraversalFunctor_project",
    "AstVisitor_project",
    "automaton_project",
    "Automaton_project",
    "bag_of_words_visitor_project",
    "BagOfWordsVisitor_project",
    "BinsConfig_project",
    "BitSet_project",
    "BootstrapConfig_project",
    "buffer_project",
    "Buffer_project",
    "BuildConfigApplicator_project",
    "build_config_project",
    "BuildConfig_project",
    "BUILDER_CONFIG_FILENAME_project",
    "builder_project",
    "Builder_project",
    "BuildError_project",
    "build_project",
    "ByteClassElementRanges_project",
    "ByteClassElements_project",
    "ByteClasses_project",
    "ByteClassIter_project",
    "ByteClassSet_project",
    "byte_frequencies_project",
    "BYTE_FREQUENCIES_project",
    "ByteSet_project",
    "Candidate_project",
    "CargoDetails_project",
    "cargo_info_project",
    "CargoInfo_project",
    "CargoInfoTrait_project",
    "CargoToml_project",
    "ChangeIdConfig_project",
    "changeid_project",
    "ChangeIdWrapper_project",
    "channel_project",
    "check_incompatible_options_for_ci_llvm_project",
    "check_incompatible_options_for_ci_rustc_project",
    "check_nix_command_available_project",
    "check_rust_toolchain_sysroot_project",
    "CiConfigApplicator_project",
    "ci_config_project",
    "ciconfig_project",
    "CiConfig_project",
    "CiEnv_project",
    "ci_project",
    "Ci_project",
    "ClassifiedUseStatements_project",
    "classify_uses_functor_project",
    "ClassifyUsesFunctor_project",
    "cli_project",
    "CODEGEN_BACKEND_PREFIX_project",
    "code_generator_project",
    "collect_all_test_cases_project",
    "collect_and_process_use_statements_project",
    "CollectedPreludeInfo_project",
    "color_project",
    "Color_project",
    "command_handlers_project",
    "commit_files_project",
    "Compiler_project",
    "compiletest_project",
    "Compiletest_project",
    "ComplexConfig_project",
    "compose_path_project",
    "config_applicator_project",
    "ConfigApplicator_project",
    "config_base_project",
    "config_ci_project",
    "ConfigField_project",
    "config_generator_project",
    "ConfigInput_project",
    "config_params_project",
    "ConfigParams_project",
    "config_parser_project",
    "config_part2_project",
    "config_part3_project",
    "config_part4_project",
    "config_part6_project",
    "config_part7_project",
    "config_project",
    "Config_project",
    "config_toml_project",
    "config_types_project",
    "config_utils_project",
    "constant_storage_project",
    "construct_config_content_project",
    "construct_flake_nix_content_project",
    "contains_complex_attributes_for_const_project",
    "contains_complex_attributes_project",
    "contains_complex_fields_project",
    "contains_complex_type_in_type_project",
    "contiguous_project",
    "copy_dir_all_project",
    "create_orphan_branch_project",
    "DebugByte_project",
    "debug_info_level_project",
    "DebuginfoLevel_project",
    "debug_project",
    "DeclarationItem_project",
    "declaration_processing_project",
    "declaration_project",
    "Declaration_project",
    "decls_visitor_project",
    "DeclsVisitor_project",
    "DEFAULT_BUFFER_CAPACITY_project",
    "default_opts_project",
    "DEFAULT_VALUE_project",
    "detail_exit_project",
    "dfa_project",
    "DFA_project",
    "dir_is_empty_project",
    "DistConfig_project",
    "dist_project",
    "Dist_project",
    "DocTests_project",
    "drop_bomb_project",
    "DropBomb_project",
    "dry_run_project",
    "DryRun_project",
    "end_group_project",
    "enforce_anchored_consistency_project",
    "EnvConfig_project",
    "ErrorCollection_project",
    "error_collector_project",
    "error_handling_project",
    "ErrorKind_project",
    "error_project",
    "ErrorSample_project",
    "exe_project",
    "expand_macros_and_parse_project",
    "ext_project",
    "extract_all_declarations_from_crate_project",
    "extract_bag_of_types_project",
    "extract_rustc_version_from_path_project",
    "extract_test_cases_from_file_project",
    "extract_test_functions_from_items_project",
    "extract_uses_functor_project",
    "ExtractUsesFunctor_project",
    "fail_project",
    "FatMaskBuilder_project",
    "Fat_project",
    "FatVector_project",
    "__Field_project",
    "FIELDS_project",
    "__FieldVisitor_project",
    "FileProcessingResult_project",
    "FileProcessingStatus_project",
    "file_writer_project",
    "FindIter_project",
    "find_nix_package_store_path_project",
    "FindOverlappingIter_project",
    "FlakeGeneratorConfig_project",
    "flake_generator_project",
    "flatten_use_tree_project",
    "fmt_state_indicator_project",
    "ForceAlgorithm_project",
    "format_file_project",
    "format_new_project",
    "format_optimize_error_msg_project",
    "format_rust_code_project",
    "freq_rank_project",
    "FunctionInfo_project",
    "FunctionMetrics_project",
    "GemConfig_project",
    "GemEntry_project",
    "gem_parser_project",
    "generate_aggregated_use_test_file_project",
    "generate_ast_statistics_code_project",
    "generate_config_toml_project",
    "generate_flake_for_crate_project",
    "generate_flake_nix_content_project",
    "generate_prelude_project",
    "generate_report_project",
    "generate_step1_flake_project",
    "generate_test_report_json_project",
    "generate_test_verification_script_and_report_project",
    "generic_project",
    "get_all_rustc_paths_from_nix_store_project",
    "get_builder_toml_project",
    "get_closest_merge_commit_project",
    "get_collected_metrics_project",
    "get_flake_input_project",
    "get_git_modified_files_project",
    "get_git_untracked_files_project",
    "get_match_project",
    "get_required_uses_for_item_const_project",
    "get_required_uses_for_item_struct_project",
    "get_rustc_info_project",
    "get_rust_lang_rust_remote_project",
    "get_toml_project",
    "gha_project",
    "git_command_helpers_project",
    "GitCommand_project",
    "GitConfig_project",
    "GitDetails_project",
    "git_info_project",
    "GitInfo_project",
    "GitInfoTrait_project",
    "git_project",
    "git_upstream_merge_base_project",
    "group_project",
    "Group_project",
    "handle_analyze_ast_project",
    "handle_analyze_bag_of_words_project",
    "handle_calculate_layers_project",
    "handle_collect_and_process_use_statements_project",
    "handle_compile_tests_project",
    "handle_extract_global_level0_decls_project",
    "handle_extract_numerical_constants_project",
    "handle_extract_string_constants_project",
    "handle_extract_use_statements_project",
    "handle_generate_aggregated_test_file_project",
    "handle_generate_test_report_project",
    "handle_pipeline_result_project",
    "handle_run_pipeline_project",
    "handle_verify_config_project",
    "Hash_project",
    "helpers_project",
    "hugging_face_validator_functor_project",
    "HuggingFaceValidatorFunctor_project",
    "I32_project",
    "I64_project",
    "I8_project",
    "ImportInfo_project",
    "imp_project",
    "IndexMapper_project",
    "Input_project",
    "inspect_functor_project",
    "InspectFunctor_project",
    "InstallConfigApplicator_project",
    "install_config_project",
    "InstallConfig_project",
    "install_project",
    "Install_project",
    "int_project",
    "is_ci_llvm_available_project",
    "is_complex_type_project",
    "is_download_ci_available_project",
    "is_equal_raw_project",
    "is_in_gha_project",
    "is_prefix_project",
    "IteratorIndexExt_project",
    "JsonInvocation_project",
    "JsonInvocationSystemStats_project",
    "JsonNode_project",
    "JsonRoot_project",
    "JsonStepSystemStats_project",
    "Kind_project",
    "layer_declarations_project",
    "LAZY_project",
    "lib_project",
    "LinuxDetails_project",
    "linux_info_project",
    "LinuxInfo_project",
    "LinuxInfoTrait_project",
    "lld_mode_project",
    "LldMode_project",
    "LldModeVisitor_project",
    "LlvmAssertionsConfigApplicator_project",
    "llvm_assertions_config_project",
    "LlvmConfig_project",
    "LlvmDetails_project",
    "llvm_info_project",
    "LlvmInfo_project",
    "LlvmInfoTrait_project",
    "llvm_lib_unwind_project",
    "LlvmLibunwind_project",
    "LLVM_PGO_CRATES_project",
    "llvm_project",
    "Llvm_project",
    "local_build_project",
    "LocalBuild_project",
    "local_ci_config_project",
    "LocalCiConfig_project",
    "local_dist_project",
    "LocalDist_project",
    "local_flags_project",
    "LocalFlags_project",
    "local_llvm_project",
    "LocalLlvm_project",
    "local_nix_config_project",
    "LocalNixConfig_project",
    "local_rust_project",
    "LocalRust_project",
    "local_target_config_project",
    "LocalTargetConfig_project",
    "local_toml_config_project",
    "LocalTomlConfig_project",
    "macros_project",
    "Mapping_project",
    "Mask_project",
    "MatchErrorKind_project",
    "MatchError_project",
    "MatchKind_project",
    "Match_project",
    "measurement_project",
    "MemmemBuilder_project",
    "Memmem_project",
    "merge_project",
    "Merge_project",
    "Metadata_project",
    "metrics_project",
    "METRICS_project",
    "MIN_TEST_NUM_project",
    "MinTestStruct_project",
    "modify_crate_root_project",
    "modify_file_project",
    "MyConfig_project",
    "MyTest_project",
    "nfa_project",
    "NFA_project",
    "NixConfigApplicator_project",
    "nix_config_project",
    "NixConfig_project",
    "NixDetails_project",
    "nix_eval_utils_project",
    "nix_info_project",
    "NixInfo_project",
    "NixInfoTrait_project",
    "Nix_project",
    "noncontiguous_project",
    "NUM_BUCKETS_project",
    "numerical_constants_project",
    "opposite_ascii_case_project",
    "OptimizeVisitor_project",
    "output_project",
    "output_result_project",
    "OverlappingState_project",
    "Package_project",
    "packed_project",
    "Packed_project",
    "parse_arguments_and_config_project",
    "parse_config_project",
    "parsed_config_project",
    "ParsedConfig_project",
    "ParsedFile_project",
    "ParseFunctor_project",
    "parse_gitmodules_project",
    "parse_inner_build_project",
    "parse_inner_flags_project",
    "parse_inner_out_project",
    "parse_inner_src_project",
    "parse_inner_toml_project",
    "parse_project",
    "parser_project",
    "parse_stage0_file_project",
    "PatternIDError_project",
    "PatternIDIter_project",
    "PatternID_project",
    "PatternIter_project",
    "PATTERN_LIMIT_project",
    "pattern_project",
    "Pattern_project",
    "Patterns_project",
    "PipelineFunctor_project",
    "pipeline_project",
    "Pointer_project",
    "preconditions_project",
    "PrefilterI_project",
    "prefilter_project",
    "Prefilter_project",
    "prelude_category_pipeline_impls_project",
    "prelude_category_pipeline_project",
    "prelude_project",
    "preprocess_functor_project",
    "PreprocessFunctor_project",
    "primitives_project",
    "private_project",
    "process_config_project",
    "process_constants_project",
    "process_crates_project",
    "processor_project",
    "public_tests_project",
    "QueuedSet_project",
    "rabinkarp_project",
    "RabinKarp_project",
    "RareByteOffset_project",
    "RareByteOffsets_project",
    "RareBytesBuilder_project",
    "RareBytesOne_project",
    "RareBytesThree_project",
    "RareBytesTwo_project",
    "RawFile_project",
    "read_commit_info_file_project",
    "read_config_project",
    "ReconstructedAst_project",
    "record_function_entry_project",
    "record_function_exit_project",
    "Remappable_project",
    "remapper_project",
    "Remapper_project",
    "replaceop_project",
    "ReplaceOpt_project",
    "report_project",
    "RE_SPLIT_IDENT_project",
    "rev_exists_project",
    "run_category_pipeline_project",
    "RunConfig_project",
    "run_git_command_project",
    "run_nix_eval_project",
    "run_statix_check_project",
    "RustChannelGitHashConfigApplicator_project",
    "rust_channel_git_hash_config_project",
    "RUSTC_IF_UNCHANGED_ALLOWED_PATHS_project",
    "rustc_info_project",
    "RustcInfo_project",
    "rustclto_project",
    "RustcLto_project",
    "RustConfig_project",
    "RUSTC_PGO_CRATES_project",
    "rust_details_info_project",
    "RustDetailsInfo_project",
    "RustDetailsInfoTrait_project",
    "RustDetails_project",
    "rustfmt_project",
    "RustfmtState_project",
    "rust_optimize_project",
    "RustOptimize_project",
    "rust_project",
    "Rust_project",
    "Sealed_project",
    "Searcher_project",
    "SearcherT_project",
    "SearchKind_project",
    "search_project",
    "set_project",
    "ShouldRun_project",
    "SlimMaskBuilder_project",
    "SlimNeon_project",
    "Slim_project",
    "SmallIndexError_project",
    "SmallIndexIter_project",
    "SmallIndex_project",
    "Span_project",
    "sparse_iter_project",
    "sparse_transitions_project",
    "special_project",
    "Special_project",
    "splitdebuginfo_project",
    "SplitDebuginfo_project",
    "__stability_project",
    "Stage0Config_project",
    "stage0_parser_project",
    "Stage0_project",
    "StartBytesBuilder_project",
    "StartBytesOne_project",
    "StartBytesThree_project",
    "StartBytesTwo_project",
    "start_group_project",
    "StartKind_project",
    "StateIDError_project",
    "StateIDIter_project",
    "StateID_project",
    "State_project",
    "StateTrans_project",
    "__static_ref_initialize_project",
    "statix_checker_project",
    "Step_project",
    "StreamChunkIter_project",
    "StreamChunk_project",
    "StreamFindIter_project",
    "string_constants_project",
    "stringorbool_project",
    "StringOrBool_project",
    "string_or_int_project",
    "StringOrInt_project",
    "SUBMODULES_PATHS_project",
    "SynDetails_project",
    "syn_info_project",
    "SynInfo_project",
    "SynInfoTrait_project",
    "target_project",
    "Target_project",
    "target_selection_list_project",
    "TargetSelectionList_project",
    "target_selection_project",
    "TargetSelection_project",
    "teddy_project",
    "Teddy_project",
    "test_args_custom_values_project",
    "test_args_default_values_project",
    "TestDefinitionArgs_project",
    "test_extractor_project",
    "test_generate_prelude_creates_file_project",
    "test_generate_prelude_dry_run_project",
    "test_generate_prelude_force_overwrite_project",
    "test_generate_prelude_no_force_no_overwrite_project",
    "test_generate_report_empty_results_project",
    "test_generate_report_with_results_project",
    "TestInfo_project",
    "TestOutcome_project",
    "Test_project",
    "tests_project",
    "TestSuiteMetadata_project",
    "TestSuite_project",
    "threads_from_config_project",
    "tokenize_ident_to_subwords_project",
    "tomlconfig_project",
    "TomlConfig_project",
    "tomltarget_project",
    "TomlTarget_project",
    "to_snake_case_project",
    "Transition_project",
    "try_find_fwd_imp_project",
    "try_find_fwd_project",
    "try_find_overlapping_fwd_imp_project",
    "try_find_overlapping_fwd_project",
    "try_run_project",
    "TypeCollector_project",
    "type_extractor_project",
    "TypeInfo_project",
    "U16_project",
    "u32_len_project",
    "U32_project",
    "U64_project",
    "U8_project",
    "unknown_declaration_project",
    "updated_master_branch_project",
    "use_extractor_project",
    "use_item_to_string_project",
    "UseStatement_project",
    "use_statements_project",
    "UseStatements_project",
    "use_statement_types_project",
    "Usize_project",
    "util_project",
    "utils_project",
    "ValidatedFile_project",
    "validate_project_root_project",
    "validate_rust_code_project",
    "VariableInfo_project",
    "VARIANTS_project",
    "vector_project",
    "Vector_project",
    "VersionMetadata_project",
    "__Visitor_project",
    "warnings_project",
    "Warnings_project",
    "WithPatternIDIter_project",
    "WithStateIDIter_project",
    "write_flake_and_config_project",
    "write_numerical_constants_to_hierarchical_structure_project",
    "write_string_constants_to_hierarchical_structure_project",
]

