[package]
name = "prelude-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
walkdir = "2"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
prettyplease = "0.2"
dunce = "1.0"
prelude-collector = { path = "../generated/crates/prelude-collector" }
toml = "0.8"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
sha2 = "0.10"
indoc = "1.0"
lazy_static = "1.4.0"
libgit2-sys = "*"
tokio = { version = "1", features = ["full"] }
#
#git2 = "^0.18.3"
git2 = "*"

hf-dataset-validator = {	     path = "../vendor/rust/hugging-face-dataset-validator-rust/"	     }

[dev-dependencies]
