[package]
name = "prelude-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2"
cargo_metadata = "0.18.1"
toml = "0.8.13"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
prettyplease = "0.2"
#prelude-collector = { path = "../generated/crates/prelude-collector" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
sha2 = "0.10"
base64 = "0.21"
indoc = "1.0"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
once_cell = "1.19.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
regex = "1"
glob = "0.3.0"
pipeline-traits = { path = "../pipeline-traits" }
ast-decoder = { path = "../ast-decoder" }
split-expanded-lib = { path = "../split-expanded-lib" }

[dev-dependencies]
