[package]
name = "rust-decl-splitter"
version = "0.1.0"
edition = "2024"

[dependencies]
prelude-generator = { path = "../prelude-generator" }
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
walkdir = "2.3"
anyhow = "1.0"
cargo_metadata = "0.18"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
