[package]
name = "split-expanded-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
tokio = { version = "1.0", features = ["full"] }
cargo_metadata = "0.18"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }