[package]
name = "syn-usage-collector"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "syn-usage-collector"
path = "src/main.rs"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
anyhow = "1.0"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
split-expanded-lib = { path = "../split-expanded-lib" }
prelude-generator = { path = "../prelude-generator" }
