[package]
name = "test-bootstrap"
version = "0.0.0"
edition = "2021"

default-run = "test-bootstrap"

[features]
build-metrics = []
bootstrap-self-test = [] # enabled in the bootstrap unit tests



#[[bin]]
#name = "test-bootstrap"
#path = "src/bin/main.rs"
#test = false

#[[bin]]
#name = "test-rustc"
#path = "src/bin/rustc.rs"
#test = false

#[[bin]]
#name = "test-rustdoc"
#path = "src/bin/rustdoc.rs"
#test = false

#[[bin]]
#name = "test-sccache-plus-cl"
#path = "src/bin/sccache-plus-cl.rs"
#test = false

#[[bin]]
#name = "test-nix_bootstrap"
#path = "src/bin/nix_bootstrap.rs"
#test = false

[dependencies]
#test_definitions_macro = { path = "../../../test_definitions_crates/test_definitions_macro" }

[target.'cfg(windows)'.dependencies.junction]
version = "1.0.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_JobObjects",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Time",
]

[dev-dependencies]

# We care a lot about bootstrap's compile times, so don't include debuginfo for
# dependencies, only bootstrap itself.
[profile.dev]
debug = 0

[profile.dev.package]
# Only use debuginfo=1 to further reduce compile times.
bootstrap.debug = 1
