[package]
name = "code-graph-flattener"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
prelude-generator = { path = "../../prelude-generator" }
# Add other dependencies as needed, e.g., for graph representation
# petgraph = "0.6"
petgraph = "0.6"
