[package]
name = "flake-orchestrator-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
cargo_metadata = "0.18"
expanded-code-collector = { path = "../expanded-code-collector" }
split-expanded-lib = { path = "../../split-expanded-lib" }
flake-template-generator = { path = "../../flake-template-generator" }
git-utils = { path = "../git-utils" }
