[package]
name = "local_target_config_project"
version = "0.1.0"
edition = "2021"

[lib]
# This will be set to proc-macro = true if proc macros are detected

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
cargo_metadata = "0.18.1"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2.0"
lazy_static = "1.4.0"
once_cell = "1.19.0"

split-expanded-lib = { path = "../../split-expanded-lib" }
build_helper = { path = "../../standalonex/src/build_helper" }
config_macros = { path = "../../standalonex/src/config_macros" }
config_core = { path = "../../standalonex/src/config_core" }
