[package]
name = "flake-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tempfile = "3.8"
walkdir = "2.3"
flake-template-generator = { path = "../../flake-template-generator" }
