[package]
name = "bootstrap-config-builder-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
semver = "1.0"
clap = { version = "4.4", features = ["derive"] }
clap_complete = { version = "4.4" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
config_macros = { path = "../config_macros" }
config_core = { path = "../config_core" }
build_helper = { path = "../build_helper" }
