[package]
name = "bootstrap-config-types"
version = "0.1.0"
edition = "2021"

[features]
bootstrap-self-test = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
clap = { version = "4.0", features = ["derive"] }
clap_complete = { version = "4.4" }
anyhow = "1.0"
config_macros = { path = "../config_macros" }
config_core = { path = "../config_core" }
build_helper = { path = "../build_helper" }
#build_helper = { path = "../" }